# 2023_1_Chaihona_-1

./: .gitignore  CMakeLists.txt  Makefile  README.md  ServerCMakeLists.txt  dbMain.cpp  main.cpp
.github/workflows/: ci.yml
Client/: CMakeLists.txt
Client/include/: client.hpp  client_manager.hpp  request_maker.hpp
Client/src/: client.cpp  client_manager.cpp  request_maker.cpp
DBConnection/: CMakeLists.txt
DBConnection/include/: DBConnection.hpp
DBConnection/src/: DBConnection.cpp
DBManager/: CMakeLists.txt
DBManager/include/: DBManager.hpp
DBManager/src/: DBManager.cpp
DBRequests/: CMakeLists.txt
DBRequests/include/: Authorise.hpp  CheckEmail.hpp  CheckLogin.hpp  CheckUser.hpp  ContactRequests.hpp  FormRequests.hpp  GetPossibleInterests.hpp  GetPossibleLifestyles.hpp  InsertContact.hpp  InsertForm.hpp  InsertInterest.hpp  InsertLifestyle.hpp  InsertProfile.hpp  InsertUser.hpp  InterestRequests.hpp  LifestyleRequests.hpp  MatchRequests.hpp  PreferencesRequests.hpp  ProfileRequests.hpp  SelectRecForms.hpp  SelectUserContacts.hpp  SelectUserForm.hpp  UpdateContact.hpp  UpdateForm.hpp  UpdateInterest.hpp  UpdateLifestyle.hpp  UserInterestRequests.hpp  UserLifestyleRequests.hpp  UserRequests.hpp
DBRequests/src/: CheckEmail.cpp  CheckLogin.cpp  ContactRequests.cpp  FormRequests.cpp  InterestRequests.cpp  LifestyleRequests.cpp  MatchRequests.cpp  PreferencesRequests.cpp  ProfileRequests.cpp  UserInterestRequests.cpp  UserLifestyleRequests.cpp  UserRequests.cpp
DBWork/: CMakeLists.txt
DBWork/include/: DBWork.hpp
DBWork/src/: DBWork.cpp
DataModel/: CMakeLists.txt
DataModel/include/: contact.hpp  form.hpp  interest.hpp  lifestyle.hpp  match.hpp  preference.hpp  profile.hpp  user.hpp
DataModel/src/: contact.cpp  form.cpp  interest.cpp  lifesyle.cpp  preference.cpp  profile.cpp  user.cpp
Geocoder/: CMakeLists.txt
Geocoder/include/: Geocoder.hpp
Geocoder/src/: Geocoder.cpp
HobbyHub/: HobbyHub.pro  checkprofile.cpp  checkprofile.h  checkprofile.ui  connection.h  editmydata.cpp  editmydata.ui  fillcontacts.cpp  fillcontacts.h  fillcontacts.ui  fillingdatapage.cpp  fillingdatapage.h  fillingdatapage.ui  forgotpassword.ui  greetingpage.cpp  greetingpage.h  greetingpage.ui  lifestyle.cpp  lifestyle.h  lifestyle.ui  lifestylechoices.cpp  lifestylechoices.h  lifestylechoices.ui  listofmathes.cpp  listofmathes.h  listofmathes.ui  main.cpp  mappage.cpp  mappage.h  mappage.ui  match.cpp  match.h  match.ui  meetingpage.cpp  meetingpage.h  meetingpage.ui  myaccount.cpp  myaccount.h  myaccount.ui  rating.cpp  (+6 more)
SQLProvider/: CMakeLists.txt
SQLProvider/include/: SQLProvider.hpp
SQLProvider/src/: SQLProvider.cpp
SQLTemplates/: authorise.sql  check_email.sql  check_login.sql  get_contact_id.sql  get_form_by_id.sql  get_match_result.sql  get_matches.sql  get_possible_interests.sql  get_possible_lifestyles.sql  get_rec_forms.sql  get_user_contacts.sql  get_user_form.sql  get_user_interests.sql  get_user_lifestyles.sql  get_user_preferences.sql  insert_contact.sql  insert_form.sql  insert_match.sql  insert_preference.sql  insert_profile.sql  insert_user.sql  insert_user_contact.sql  insert_user_interest.sql  insert_user_lifestyle.sql  insert_vec_text.sql  sample.sql  select.sql  select_user_profile.sql  update_contact_value.sql  update_user_interest_rate.sql  update_user_lifestyle_choice.sql
UI/: CMakeLists.txt  connection.h  editmydata.h  fillingdatapage.cpp  fillingdatapage.h  fillingdatapage.ui  forgotpassword.cpp  forgotpassword.h  forgotpassword.ui  greetingpage.cpp  greetingpage.h  greetingpage.ui  listofmathes.h  listofmathes.ui  main.cpp  match.cpp  match.ui  meetingpage.cpp  meetingpage.h  myaccount.cpp  myaccount.h  myaccount.ui  registrationpage.cpp  registrationpage.h  tests.cpp  tests.h
chat/: CMakeLists.txt
chat/include/: chat.h  check.h  liboai.h
chat/src/: authorization.cpp  chat.cpp  check.cpp  netimpl.cpp  response.cpp
configs/: db.json
filtering/: CMakeLists.txt
filtering/include/: filtering.hpp
filtering/src/: filtering.cpp
filtering/test/: filtering_test.cpp
include/: recommendation.hpp
lib/Client/: CMakeLists.txt
lib/Client/include/: client.hpp  client_manager.hpp  request_maker.hpp
lib/Client/src/: client.cpp  client_manager.cpp  request_maker.cpp  user.cpp
lib/filtering/include/: filtering.hpp
lib/filtering/src/: filtering.cpp
lib/server/: CMakeLists.txt  main.cpp
lib/server/include/: database_manager.hpp  request_handler.hpp  server.hpp  session.hpp
lib/server/src/: request_handler.cpp  server.cpp  session.cpp
lib/text_processing/include/: text_processing.hpp  tfidf_vectorization.hpp
lib/text_processing/src/: text_processing.cpp  tfidf_vectorization.cpp
nlohmann/: CMakeLists.txt
recommendation/: CMakeLists.txt
recommendation/include/: recommendation.hpp
recommendation/src/: recommendation.cpp
server/: CMakeLists.txt
server/include/: database_manager.hpp  request_handler.hpp  session.hpp
server/src/: request_handler.cpp  session.cpp
server/tests/: CMakeLists.txt
server/tests/include/: request_handler_test.hpp
server/tests/src/: request_handler_test.cpp
src/: main.cpp  recommendation.cpp
structures/: CMakeLists.txt
structures/include/: user.hpp
structures/src/: user.cpp
test/dbRequestsTest/: CMakeLists.txt  db_requests_test.cpp
test/dbTest/: CMakeLists.txt  db_test.cpp
test/geocoderTest/: CMakeLists.txt  geocoder_test.cpp
tests/: CMakeLists.txt
tests/include/: client_manager_test.hpp  request_maker_test.hpp
tests/src/: client_manager_test.cpp  request_maker_test.cpp
text_processing/: CMakeLists.txt
text_processing/include/: text_processing.hpp
text_processing/src/: text_processing.cpp
text_processing/test/src/: stemmizer_test.cpp
vectorization/: CMakeLists.txt
vectorization/include/: text_processing.hpp  tfidf_vectorization.hpp
vectorization/src/: text_processing.cpp  tfidf_vectorization.cpp
vectorization/test/data/: docs.txt
vectorization/test/src/: stemmizer_test.cpp  tfidf_test.cpp  tokenizer_test.cpp
(+7 files in other folders)
