cmake_minimum_required(VERSION 3.13)
project(nlohmann)

set (CMAKE_CXX_STANDARD 20)

set(NLOHMANN_LIBRARIES)
set(NLOHMANN_INCLUDE_DIRS)

set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-w")

file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} INTERFACE)

set(NLOHMANN_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(NLOHMANN_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)